@@ -6,6 +6,7 @@ import com.b9.json.jsonplatform.auth.domain.User;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
+import static org.hamcrest.Matchers.containsString;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -13,7 +14,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
@@ -88,20 +89,45 @@ class AuthControllerTest {
     }
 
     @Test
-    void testListUsers() throws Exception {
+    void testListUsers_NoFilter_ShouldReturnAll() throws Exception {
         User user1 = new User();
         user1.setUsername("user1");
 
         User user2 = new User();
         user2.setUsername("user2");
 
-        Mockito.when(authService.findAllUsers()).thenReturn(Arrays.asList(user1, user2));
+        Mockito.when(authService.findAllUsers(null)).thenReturn(List.of(user1, user2));
 
         mockMvc.perform(get("/auth/list")
                         .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.length()").value(2))
-                .andExpect(jsonPath("$[0].username").value("user1"))
-                .andExpect(jsonPath("$[1].username").value("user2"));
+                .andExpect(jsonPath("$.length()").value(2));
+    }
+
+    @Test
+    void testListUsers_FilterBanned_ShouldReturnBannedUsers() throws Exception {
+        User bannedUser = new User();
+        bannedUser.setUsername("banneduser");
+
+        Mockito.when(authService.findAllUsers("banned")).thenReturn(List.of(bannedUser));
+
+        mockMvc.perform(get("/auth/list")
+                        .param("status", "banned")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(1))
+                .andExpect(jsonPath("$[0].username").value("banneduser"));
+    }
+
+    @Test
+    void testListUsers_InvalidStatus_ShouldReturnBadRequest() throws Exception {
+        Mockito.when(authService.findAllUsers("unknown"))
+                .thenThrow(new IllegalArgumentException("Status tidak valid: unknown"));
+
+        mockMvc.perform(get("/auth/list")
+                        .param("status", "unknown")
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isBadRequest())
+                .andExpect(content().string(containsString("Status tidak valid")));
     }
 }
